# python-template

./: .gitignore  README.md  pyproject.toml
src/: main.py
