[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "ruff>=0.14.6",
    "ty>=0.0.11",
]

# added by AN
[tool.poe.tasks]
format = "uv run ruff format ."
lint = "uv run ruff check ."
lint-fix = "uv run ruff check . --fix"
type-check = "uv run ty check ."

check = ["format","lint","type-check"]
check-fix = ["format","lint-fix","type-check"]
